:bug: Fix bug that adds an scrollbar to david frames

--- a/src/scss/_objects/tapps.scss
+++ b/src/scss/_objects/tapps.scss
@@ -59,7 +59,7 @@
   }
 }
 
-.chayns--parent {
+.chayns--parent:not(.chayns--net_runtime) {
   overflow: auto;
 
   body {
